# rust-grpc-quickstart-template

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.yaml  docker-compose.yml  setup.py
deployments/scripts/: entrypoint.sh
libs/tonic-error/: Cargo.toml
migrations/: 20240614122540_initial_setup.sql
proto/auth/: echo.proto
proto/echo/v1/: echo.proto
src/: lib.rs  main.rs
src/database/: database.rs  mod.rs  redis.rs
src/errors/: errors.rs
src/rpcs/: echo.rs
src/server/: mod.rs  server.rs
src/server/services/v1/echo/: echo_handlers.rs  echo_service.rs  echo_validation.rs  mod.rs
src/services/: echo.rs
src/tests/: integration.rs  mod.rs
src/validations/: mod.rs  validate_echo.rs
tests/: mod.rs
tests/rpcs/: integration.rs
