[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"
protos = { path = "libs/gen" }
tonic-error = { path = "libs/tonic-error" }
redis = "0.25.3"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.11.0", features = ["tls"] }
uuid = "1.8.0"
serde = { version = "1.0.198", features = ["derive"] }
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
dotenvy = "0.15.7"
prost = "0.12.4"
tonic-reflection = "0.11.0"
yaml-rust = "0.4.5"
futures-util = "0.3.30"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
serde_variant = "0.1.3"

[workspace]
members = [
    "libs/gen",
    "libs/tonic-error"
]
